# Stone

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  MetalInit.cpp  main.cpp  main.mm
src/Core/: Buffer.cpp  Buffer.h  CMakeLists.txt  CommandBuffer.cpp  CommandBuffer.h  CommandBufferPool.cpp  CommandBufferPool.h  Heap.cpp  Heap.h  MetalContext.cpp  MetalContext.h  MetalContext.mm  Window.h  Window.mm
src/Render/: CMakeLists.txt  GeometryGenerator.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h
src/Shader/: CMakeLists.txt  Triangle.metal
src/Utility/: CMakeLists.txt  Logger.cpp  Logger.h
